# cpp.udemy.advancedcpp

./: CMakeLists.txt  README.md
02-Exceptions/: CMakeLists.txt  main.cpp
03-BinaryReadWrite/: CMakeLists.txt  main.cpp
03-FilesReading/: CMakeLists.txt  main.cpp
03-FilesWriting/: CMakeLists.txt  main.cpp
03-ParsingTextFiles/: CMakeLists.txt  main.cpp
03-StructsAndPadding/: CMakeLists.txt  main.cpp
04-11-Vectors/: CMakeLists.txt  main.cpp
04-12-Vectors_Memory/: CMakeLists.txt  main.cpp
04-13-TwoDimensionalVectors/: CMakeLists.txt  main.cpp
04-14-List/: CMakeLists.txt  main.cpp
04-15-Maps/: CMakeLists.txt  main.cpp
04-16-CustomObjectsMaps/: CMakeLists.txt  main.cpp
04-17-CustomObjectsMapsAsKeys/: CMakeLists.txt  main.cpp
04-18-Multimaps/: CMakeLists.txt  main.cpp
04-19-Sets/: CMakeLists.txt  main.cpp
04-20-StacksQueues/: CMakeLists.txt  main.cpp
04-21-SortingDequeFriend/: CMakeLists.txt  main.cpp
04-22-STLcomplexData/: CMakeLists.txt  main.cpp
05-23-OverloadingAssignmentOperator/: CMakeLists.txt  main.cpp
05-24-OverloadingPrintOperator/: CMakeLists.txt  main.cpp
05-25-ComplexNumberClass/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
05-26-OverloadingPlusOperator/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
05-27-OverloadingEqualOperator/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
05-28-OverloadingDereffOperator/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
06-29-Templates/: CMakeLists.txt  main.cpp
06-30-TemplatesClasses/: CMakeLists.txt  main.cpp
06-31-TemplatesFunctions/: CMakeLists.txt  main.cpp
06-32-TemplatesTypeInference/: CMakeLists.txt  main.cpp
07-33-FunctionPointers/: CMakeLists.txt  main.cpp
07-34-FunctionPointersV2/: CMakeLists.txt  main.cpp
07-35-ObjectSlicingPolymorphism/: CMakeLists.txt  main.cpp
07-36-AbstractClassPureFuctions/: CMakeLists.txt  main.cpp
07-37-Functors/: CMakeLists.txt  main.cpp
08-38-DelcType_TypeId/: CMakeLists.txt  main.cpp
08-39-Auto/: CMakeLists.txt  main.cpp
08-40-For_Range/: CMakeLists.txt  main.cpp
08-41-NestedTemplateClasses/: CMakeLists.txt  main.cpp
08-42-RingBuffer/: CMakeLists.txt  main.cpp
08-43-ClassIterable/: CMakeLists.txt  main.cpp
08-44-Initialization98/: CMakeLists.txt  main.cpp
08-45-Initialization11/: CMakeLists.txt  main.cpp
08-46-InitializerList/: CMakeLists.txt  main.cpp
08-47-ObjectInitialization/: CMakeLists.txt  main.cpp
08-48-Lambda/: CMakeLists.txt  main.cpp
08-49-LambdaParamsReturnTypes/: CMakeLists.txt  main.cpp
08-50-LambdaCaptureExpression/: CMakeLists.txt  main.cpp
08-51-LambdaCaptureThis/: CMakeLists.txt  main.cpp
08-52-FunctionalTypes/: CMakeLists.txt  main.cpp
08-53-LambdaMutable/: CMakeLists.txt  main.cpp
(+29 files in other folders)
