project(tetheallaadvancedCXX)
cmake_minimum_required(VERSION 2.6)

add_subdirectory(02-Exceptions)
add_subdirectory(03-BinaryReadWrite)
add_subdirectory(03-FilesReading)
add_subdirectory(03-FilesWriting)
add_subdirectory(03-ParsingTextFiles)
add_subdirectory(03-StructsAndPadding)
add_subdirectory(04-11-Vectors)
add_subdirectory(04-12-Vectors_Memory)
add_subdirectory(04-13-TwoDimensionalVectors)
add_subdirectory(04-14-List)
add_subdirectory(04-15-Maps)
add_subdirectory(04-16-CustomObjectsMaps)
add_subdirectory(04-17-CustomObjectsMapsAsKeys)
add_subdirectory(04-18-Multimaps)
add_subdirectory(04-19-Sets)
add_subdirectory(04-20-StacksQueues)
add_subdirectory(04-21-SortingDequeFriend)
add_subdirectory(04-22-STLcomplexData)
add_subdirectory(05-23-OverloadingAssignmentOperator)
add_subdirectory(05-24-OverloadingPrintOperator)
add_subdirectory(05-25-ComplexNumberClass)
add_subdirectory(05-26-OverloadingPlusOperator)
add_subdirectory(05-27-OverloadingEqualOperator)
add_subdirectory(05-28-OverloadingDereffOperator)
add_subdirectory(06-29-Templates)
add_subdirectory(06-30-TemplatesClasses)
add_subdirectory(06-31-TemplatesFunctions)
add_subdirectory(06-32-TemplatesTypeInference)
add_subdirectory(07-33-FunctionPointers)
add_subdirectory(07-34-FunctionPointersV2)
add_subdirectory(07-35-ObjectSlicingPolymorphism)
add_subdirectory(07-36-AbstractClassPureFuctions)
add_subdirectory(07-37-Functors)
add_subdirectory(08-38-DelcType_TypeId)
add_subdirectory(08-39-Auto)
add_subdirectory(08-40-For_Range)
add_subdirectory(08-41-NestedTemplateClasses)
add_subdirectory(08-42-RingBuffer)
add_subdirectory(08-43-ClassIterable)
add_subdirectory(08-44-Initialization98)
add_subdirectory(08-45-Initialization11)
add_subdirectory(08-46-InitializerList)
add_subdirectory(08-47-ObjectInitialization)
add_subdirectory(08-48-Lambda)
add_subdirectory(08-49-LambdaParamsReturnTypes)
add_subdirectory(08-50-LambdaCaptureExpression)
add_subdirectory(08-51-LambdaCaptureThis)
add_subdirectory(08-52-FunctionalTypes)
add_subdirectory(08-53-LambdaMutable)
add_subdirectory(08-54-DelegatingConstructors)
add_subdirectory(08-55-ElisionAndOptimization)
add_subdirectory(08-56-ConstructorsAndMemory)
add_subdirectory(08-57-RvaluesLvalues)
add_subdirectory(08-59-RvalueReferences)
add_subdirectory(08-60-MoveConstructor)
add_subdirectory(08-61-MoveAssignmentOperator)
add_subdirectory(08-62-StaticCast)
add_subdirectory(08-63-DynamicCast)
add_subdirectory(08-64-ReinterpretCast)
add_subdirectory(08-65-PerfectForwarding)
add_subdirectory(08-66-Bind)
add_subdirectory(08-67-UniquePointers)
add_subdirectory(08-68-SharedPointers)
add_subdirectory(10-72-Fractal)

